# apsbot

./: .gitignore  CHANGELOG.md  Cargo.toml  cog.toml  docker-compose.yml  flake.nix
migrations/: 0001_menu.down.sql  0001_menu.sql  0001_menu.up.sql  20220702085138_demo_org.down.sql  20220702085138_demo_org.up.sql
src/: domain.rs  main.rs
src/db/: migration.rs
